# cpp_template

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  clean_debug.bat  clean_debug.sh  clean_release.bat  clean_release.sh  generate_projects.bat  generate_projects.sh  make_build_debug.sh  make_build_release.sh  make_clean_debug.sh  make_clean_release.sh  msvc_build_debug.bat  msvc_build_release.bat  msvc_clean_debug.bat  msvc_clean_release.bat  run_debug.bat  run_debug.sh  run_release.bat  run_release.sh  test_debug.bat  test_debug.sh  test_release.bat  test_release.sh
lib/: info.txt
src/: Sample.cpp  Sample.h  info.txt  main.cpp
test/: gtest_test.cpp
